move systemd, nginx docs to admin